applications/kserve/kserve-ui/kserve-ui-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kserve-models-web-application
  namespace: kserve
spec:
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/component
      operator: In
      values:
      - kserve-models-web-application
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
  policyTypes:
  - Ingress
